// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Highlight> should render with info theme 1`] = `
.c0 {
  margin: 2rem 0;
  padding: 1rem 1.5rem 2rem;
  background-color: #eeeef0;
  border-left: solid 8px #887f87;
}

.c1 {
  font-size: 0.875rem;
  line-height: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #554f52;
}

.c2 {
  margin-top: 0.5rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4 {
  margin-bottom: 0.5em;
  color: #554f52;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Information
  </div>
  <div
    className="c2"
  >
    Hello
  </div>
</div>
`;

exports[`<Highlight> should render with info theme if no theme is provided 1`] = `
.c0 {
  margin: 2rem 0;
  padding: 1rem 1.5rem 2rem;
  background-color: #eeeef0;
  border-left: solid 8px #887f87;
}

.c1 {
  font-size: 0.875rem;
  line-height: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #554f52;
}

.c2 {
  margin-top: 0.5rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4 {
  margin-bottom: 0.5em;
  color: #554f52;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Information
  </div>
  <div
    className="c2"
  >
    Hello
  </div>
</div>
`;

exports[`<Highlight> should render with tips theme 1`] = `
.c0 {
  margin: 2rem 0;
  padding: 1rem 1.5rem 2rem;
  background-color: #ecfcfd;
  border-left: solid 8px #25a8d0;
}

.c1 {
  font-size: 0.875rem;
  line-height: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #1e5f82;
}

.c2 {
  margin-top: 0.5rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4 {
  margin-bottom: 0.5em;
  color: #1e5f82;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Useful tip
  </div>
  <div
    className="c2"
  >
    Hello
  </div>
</div>
`;

exports[`<Highlight> should render with warning theme 1`] = `
.c0 {
  margin: 2rem 0;
  padding: 1rem 1.5rem 2rem;
  background-color: #fff5eb;
  border-left: solid 8px #fc961e;
}

.c1 {
  font-size: 0.875rem;
  line-height: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #974f20;
}

.c2 {
  margin-top: 0.5rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4 {
  margin-bottom: 0.5em;
  color: #974f20;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Warning
  </div>
  <div
    className="c2"
  >
    Hello
  </div>
</div>
`;
